examples/failing/IntOutOfRange.purs
-- @shouldFailWith IntOutOfRange

module Main where

n :: Int
n = 2147483648
